Fix overflow-x

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -11,10 +11,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Public Sans', sans-serif;
-  font-size: $fontMedium ; 
+  font-size: $fontSmall; 
   font-weight: 300;
-  line-height: 1.3;
   color: $grayishBlue;
+  line-height: 1.3;
+  min-height: 350vh;
+  overflow-x: hidden;
+
 
   @include breakPointUp(large){
     font-size: $fontMedium;
